[package]
authors = ["Xander Xiao<xander.xiao@gmail.com>"]
edition = "2021"
name = "filer"
version = "1.0.8"
#resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.21.1", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "fs",
  "sync",
  "net",
  "io-util",
  "time",
  "process",
]}
#tokio-util = { version = "0.6.9",  default_features = false, features = ["io"] }
#futures-util= "0.3.18"
#futures= "0.3.18"
anyhow = {version = "1.0.65"}
byte-unit = "4.0.14"
clap = {version = "3.2.22"}
futures-util = "0.3.24"
num_cpus = "1.13.1"
serde = {version = "1.0.144", features = ["derive"]}
serde_json = "1.0.85"

blake3 = {version = "1.3.1", optional = true}
chrono = {version = "0.4.22", features = ["serde"], optional = true}
time = {version = "0.3.14", features = ["macros"], optional = true}
tracing = {version = "0.1.36", optional = true}
tracing-subscriber = {version = "0.3.15", features = [
  "env-filter",
  "time",
  "local-time",
], optional = true}
#md5={version="0.7.0", optional = true}
reqwest = {version = "0.11.11", optional = true}
#warp = { version = "0.3.1", features = ["tls", "compression"], optional = true }
axum = {path = "/rust/axum/axum", optional = true}
axum-server = {version = "0.4.2", features = ["tls-rustls"], optional = true}
tower = {version = "0.4.13", optional = true}
tower-http = {version = "0.3.4", features = [
  "fs",
  "trace",
  "set-header",
], optional = true}

#thiserror = "1.0.23"
#uuid = { version = "0.8.2", features = ["serde", "v4"] }
#async-trait = "0.1.42"
#regex = "1.4.3"

[features]
default = ["xcopy", "digest", "download", "server"]
digest = ["blake3"]
download = ["reqwest", "blake3"]
server = [
  "axum",
  "axum-server",
  "tower",
  "tower-http",
  "blake3",
  "tracing-subscriber",
  "tracing",
  "chrono",
  "time"
]
xcopy = []
